[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Level6.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesets/Blocks.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/Tilesets/Key.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/Green_Wall.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Blocks.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Key.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/CheckPoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Teleporter.tscn" type="PackedScene" id=10]

[node name="Level6" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Level" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 523775
collision_mask = 523775
format = 1
tile_data = PoolIntArray( 131075, 26, 0, 131076, 31, 0, 131077, 31, 0, 131078, 27, 0, 196609, 26, 0, 196610, 31, 0, 196611, 29, 0, 196612, 37, 0, 196613, 37, 0, 196614, 28, 0, 196615, 31, 0, 196616, 31, 0, 196617, 31, 0, 196618, 31, 0, 196619, 31, 0, 196620, 31, 0, 196621, 31, 0, 196622, 31, 0, 196623, 31, 0, 196624, 27, 0, 262145, 30, 0, 262146, 37, 0, 262147, 37, 0, 262148, 37, 0, 262149, 37, 0, 262150, 37, 0, 262151, 37, 0, 262152, 37, 0, 262153, 37, 0, 262154, 37, 0, 262155, 37, 0, 262156, 37, 0, 262157, 37, 0, 262158, 37, 0, 262159, 37, 0, 262160, 30, 0, 327681, 30, 0, 327682, 37, 0, 327683, 26, 0, 327684, 31, 0, 327685, 31, 0, 327686, 31, 0, 327687, 31, 0, 327688, 31, 0, 327689, 31, 0, 327690, 31, 0, 327691, 31, 0, 327692, 27, 0, 327693, 37, 0, 327694, 37, 0, 327695, 37, 0, 327696, 30, 0, 393217, 30, 0, 393218, 37, 0, 393219, 30, 0, 393228, 30, 0, 393229, 37, 0, 393230, 37, 0, 393231, 37, 0, 393232, 30, 0, 458752, 26, 0, 458753, 29, 0, 458754, 37, 0, 458755, 28, 0, 458756, 31, 0, 458757, 31, 0, 458758, 27, 0, 458764, 28, 0, 458765, 31, 0, 458766, 31, 0, 458767, 31, 0, 458768, 29, 0, 524288, 30, 0, 524289, 37, 0, 524290, 37, 0, 524291, 37, 0, 524292, 37, 0, 524293, 37, 0, 524294, 30, 0, 589824, 30, 0, 589825, 37, 0, 589826, 37, 0, 589827, 37, 0, 589828, 37, 0, 589829, 37, 0, 589830, 28, 0, 589831, 31, 0, 589832, 31, 0, 589833, 31, 0, 589834, 27, 0, 589845, 26, 0, 589846, 31, 0, 589847, 27, 0, 655360, 30, 0, 655361, 37, 0, 655362, 37, 0, 655363, 37, 0, 655364, 37, 0, 655365, 37, 0, 655366, 37, 0, 655367, 37, 0, 655368, 37, 0, 655369, 37, 0, 655370, 30, 0, 655371, 1, 0, 655372, 2, 0, 655375, 26, 0, 655376, 31, 0, 655377, 31, 0, 655378, 31, 0, 655379, 31, 0, 655380, 31, 0, 655381, 29, 0, 655382, 37, 0, 655383, 28, 0, 655384, 31, 0, 655385, 31, 0, 655386, 31, 0, 655387, 31, 0, 655388, 27, 0, 720896, 30, 0, 720897, 37, 0, 720898, 37, 0, 720899, 37, 0, 720900, 37, 0, 720901, 37, 0, 720902, 26, 0, 720903, 31, 0, 720904, 27, 0, 720905, 37, 0, 720906, 30, 0, 720908, 5, 0, 720911, 30, 0, 720912, 37, 0, 720913, 37, 0, 720914, 37, 0, 720915, 37, 0, 720916, 37, 0, 720917, 37, 0, 720918, 37, 0, 720919, 37, 0, 720920, 37, 0, 720921, 37, 0, 720922, 37, 0, 720923, 37, 0, 720924, 30, 0, 786432, 28, 0, 786433, 31, 0, 786434, 31, 0, 786435, 27, 0, 786436, 37, 0, 786437, 26, 0, 786438, 29, 0, 786440, 30, 0, 786441, 37, 0, 786442, 28, 0, 786443, 31, 0, 786444, 31, 0, 786445, 31, 0, 786446, 31, 0, 786447, 29, 0, 786448, 37, 0, 786449, 26, 0, 786450, 31, 0, 786451, 31, 0, 786452, 31, 0, 786453, 31, 0, 786454, 31, 0, 786455, 31, 0, 786456, 31, 0, 786457, 31, 0, 786458, 27, 0, 786459, 37, 0, 786460, 30, 0, 851971, 30, 0, 851972, 37, 0, 851973, 30, 0, 851974, 6, 0, 851975, 6, 0, 851976, 30, 0, 851977, 37, 0, 851978, 37, 0, 851979, 37, 0, 851980, 37, 0, 851981, 37, 0, 851982, 37, 0, 851983, 37, 0, 851984, 37, 0, 851985, 30, 0, 851994, 30, 0, 851995, 37, 0, 851996, 30, 0, 917507, 30, 0, 917508, 37, 0, 917509, 30, 0, 917512, 28, 0, 917513, 31, 0, 917514, 31, 0, 917515, 27, 0, 917516, 37, 0, 917517, 26, 0, 917518, 31, 0, 917519, 31, 0, 917520, 31, 0, 917521, 29, 0, 917522, 26, 0, 917523, 31, 0, 917524, 27, 0, 917527, 26, 0, 917528, 31, 0, 917529, 31, 0, 917530, 29, 0, 917531, 37, 0, 917532, 28, 0, 917533, 31, 0, 917534, 27, 0, 983043, 30, 0, 983044, 37, 0, 983045, 30, 0, 983051, 28, 0, 983052, 31, 0, 983053, 29, 0, 983055, 26, 0, 983056, 31, 0, 983057, 31, 0, 983058, 29, 0, 983059, 37, 0, 983060, 28, 0, 983061, 31, 0, 983062, 27, 0, 983063, 30, 0, 983064, 37, 0, 983065, 37, 0, 983066, 37, 0, 983067, 37, 0, 983068, 37, 0, 983069, 37, 0, 983070, 30, 0, 1048579, 30, 0, 1048580, 37, 0, 1048581, 30, 0, 1048591, 30, 0, 1048592, 37, 0, 1048593, 37, 0, 1048594, 37, 0, 1048595, 37, 0, 1048596, 37, 0, 1048597, 37, 0, 1048598, 30, 0, 1048599, 30, 0, 1048600, 37, 0, 1048601, 37, 0, 1048602, 37, 0, 1048603, 37, 0, 1048604, 37, 0, 1048605, 37, 0, 1048606, 30, 0, 1114115, 30, 0, 1114116, 37, 0, 1114117, 28, 0, 1114118, 31, 0, 1114119, 31, 0, 1114120, 31, 0, 1114121, 31, 0, 1114122, 31, 0, 1114123, 31, 0, 1114124, 27, 0, 1114127, 30, 0, 1114128, 37, 0, 1114129, 26, 0, 1114130, 31, 0, 1114131, 31, 0, 1114132, 27, 0, 1114133, 37, 0, 1114134, 30, 0, 1114135, 28, 0, 1114136, 31, 0, 1114137, 31, 0, 1114138, 27, 0, 1114139, 37, 0, 1114140, 37, 0, 1114141, 37, 0, 1114142, 30, 0, 1179651, 30, 0, 1179652, 37, 0, 1179653, 37, 0, 1179654, 37, 0, 1179655, 37, 0, 1179656, 37, 0, 1179657, 37, 0, 1179658, 37, 0, 1179659, 37, 0, 1179660, 30, 0, 1179663, 30, 0, 1179664, 37, 0, 1179665, 30, 0, 1179668, 30, 0, 1179669, 37, 0, 1179670, 30, 0, 1179674, 28, 0, 1179675, 31, 0, 1179676, 31, 0, 1179677, 31, 0, 1179678, 29, 0, 1245187, 28, 0, 1245188, 31, 0, 1245189, 31, 0, 1245190, 31, 0, 1245191, 27, 0, 1245192, 37, 0, 1245193, 26, 0, 1245194, 27, 0, 1245195, 37, 0, 1245196, 30, 0, 1245199, 30, 0, 1245200, 37, 0, 1245201, 30, 0, 1245203, 26, 0, 1245204, 29, 0, 1245205, 37, 0, 1245206, 30, 0, 1310727, 28, 0, 1310728, 31, 0, 1310729, 29, 0, 1310730, 30, 0, 1310731, 37, 0, 1310732, 30, 0, 1310735, 30, 0, 1310736, 37, 0, 1310737, 30, 0, 1310739, 30, 0, 1310740, 37, 0, 1310741, 37, 0, 1310742, 28, 0, 1310743, 31, 0, 1310744, 31, 0, 1310745, 27, 0, 1376266, 30, 0, 1376267, 37, 0, 1376268, 28, 0, 1376269, 27, 0, 1376271, 30, 0, 1376272, 37, 0, 1376273, 30, 0, 1376275, 30, 0, 1376276, 37, 0, 1376277, 37, 0, 1376278, 37, 0, 1376279, 37, 0, 1376280, 37, 0, 1376281, 30, 0, 1441802, 30, 0, 1441803, 37, 0, 1441804, 37, 0, 1441805, 30, 0, 1441807, 30, 0, 1441808, 37, 0, 1441809, 30, 0, 1441811, 30, 0, 1441812, 37, 0, 1441813, 37, 0, 1441814, 37, 0, 1441815, 37, 0, 1441816, 37, 0, 1441817, 30, 0, 1507338, 30, 0, 1507339, 37, 0, 1507340, 26, 0, 1507341, 29, 0, 1507343, 30, 0, 1507344, 37, 0, 1507345, 30, 0, 1507347, 28, 0, 1507348, 31, 0, 1507349, 31, 0, 1507350, 31, 0, 1507351, 31, 0, 1507352, 31, 0, 1507353, 29, 0, 1572874, 30, 0, 1572875, 37, 0, 1572876, 30, 0, 1572879, 30, 0, 1572880, 37, 0, 1572881, 30, 0, 1638410, 30, 0, 1638411, 37, 0, 1638412, 30, 0, 1638415, 30, 0, 1638416, 37, 0, 1638417, 30, 0, 1703946, 30, 0, 1703947, 37, 0, 1703948, 28, 0, 1703949, 31, 0, 1703950, 31, 0, 1703951, 29, 0, 1703952, 37, 0, 1703953, 30, 0, 1703956, 26, 0, 1703957, 31, 0, 1703958, 31, 0, 1703959, 31, 0, 1703960, 31, 0, 1703961, 31, 0, 1703962, 31, 0, 1703963, 31, 0, 1703964, 31, 0, 1703965, 31, 0, 1703966, 27, 0, 1769482, 30, 0, 1769483, 37, 0, 1769484, 37, 0, 1769485, 37, 0, 1769486, 37, 0, 1769487, 37, 0, 1769488, 37, 0, 1769489, 30, 0, 1769492, 30, 0, 1769493, 37, 0, 1769494, 37, 0, 1769495, 37, 0, 1769496, 37, 0, 1769497, 37, 0, 1769498, 37, 0, 1769499, 37, 0, 1769500, 37, 0, 1769501, 37, 0, 1769502, 30, 0, 1835018, 28, 0, 1835019, 31, 0, 1835020, 31, 0, 1835021, 27, 0, 1835022, 37, 0, 1835023, 26, 0, 1835024, 31, 0, 1835025, 29, 0, 1835028, 30, 0, 1835029, 37, 0, 1835030, 37, 0, 1835031, 37, 0, 1835032, 37, 0, 1835033, 37, 0, 1835034, 37, 0, 1835035, 37, 0, 1835036, 37, 0, 1835037, 37, 0, 1835038, 28, 0, 1835039, 27, 0, 1900557, 28, 0, 1900558, 31, 0, 1900559, 29, 0, 1900564, 30, 0, 1900565, 37, 0, 1900566, 37, 0, 1900567, 37, 0, 1900568, 37, 0, 1900569, 37, 0, 1900570, 37, 0, 1900571, 37, 0, 1900572, 37, 0, 1900573, 37, 0, 1900574, 38, 0, 1900575, 30, 0, 1966100, 30, 0, 1966101, 37, 0, 1966102, 37, 0, 1966103, 37, 0, 1966104, 37, 0, 1966105, 37, 0, 1966106, 37, 0, 1966107, 37, 0, 1966108, 37, 0, 1966109, 37, 0, 1966110, 26, 0, 1966111, 29, 0, 2031633, 26, 0, 2031634, 31, 0, 2031635, 31, 0, 2031636, 29, 0, 2031637, 37, 0, 2031638, 37, 0, 2031639, 37, 0, 2031640, 37, 0, 2031641, 37, 0, 2031642, 37, 0, 2031643, 37, 0, 2031644, 37, 0, 2031645, 37, 0, 2031646, 30, 0, 2097169, 30, 0, 2097170, 37, 0, 2097171, 37, 0, 2097172, 37, 0, 2097173, 37, 0, 2097174, 37, 0, 2097175, 37, 0, 2097176, 37, 0, 2097177, 37, 0, 2097178, 37, 0, 2097179, 37, 0, 2097180, 37, 0, 2097181, 37, 0, 2097182, 30, 0, 2162705, 28, 0, 2162706, 31, 0, 2162707, 31, 0, 2162708, 31, 0, 2162709, 31, 0, 2162710, 31, 0, 2162711, 31, 0, 2162712, 31, 0, 2162713, 31, 0, 2162714, 31, 0, 2162715, 31, 0, 2162716, 31, 0, 2162717, 31, 0, 2162718, 29, 0 )

[node name="Blue_Block" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 786436, 1, 0 )

[node name="Green_Block" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 655366, 2, 0 )
script = ExtResource( 4 )

[node name="Block" parent="." instance=ExtResource( 5 )]
position = Vector2( 144, 400 )
collision_layer = 0
collision_mask = 0
color = "Blue"

[node name="Block2" parent="." instance=ExtResource( 5 )]
position = Vector2( 208, 336 )
collision_layer = 0
collision_mask = 0
color = "Green"

[node name="Green_Key" parent="." instance=ExtResource( 6 )]
position = Vector2( 464, 176 )

[node name="Blue_Key" parent="." instance=ExtResource( 6 )]
position = Vector2( 885, 523 )
collision_layer = 1048575
collision_mask = 1048575
sprite = "Blue"

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 80, 144 )

[node name="CheckPoint" parent="." instance=ExtResource( 7 )]
position = Vector2( 144, 432 )

[node name="CheckPoint3" parent="." instance=ExtResource( 7 )]
position = Vector2( 240, 336 )

[node name="CheckPoint2" parent="." instance=ExtResource( 7 )]
position = Vector2( 592, 1040 )

[node name="Enemy" parent="." instance=ExtResource( 8 )]
position = Vector2( 336, 144 )
direction = "left"
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy2" parent="." instance=ExtResource( 8 )]
position = Vector2( 400, 432 )
direction = "left"
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy3" parent="." instance=ExtResource( 8 )]
position = Vector2( 720, 368 )
direction = "left"
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy4" parent="." instance=ExtResource( 8 )]
position = Vector2( 272, 592 )
direction = "left"
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy5" parent="." instance=ExtResource( 8 )]
position = Vector2( 464, 880 )
direction = "left"
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy6" parent="." instance=ExtResource( 8 )]
position = Vector2( 624, 528 )
direction = "left"
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy7" parent="." instance=ExtResource( 8 )]
position = Vector2( 688, 1008 )
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy10" parent="." instance=ExtResource( 8 )]
position = Vector2( 784, 912 )
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy11" parent="." instance=ExtResource( 8 )]
position = Vector2( 816, 880 )
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy12" parent="." instance=ExtResource( 8 )]
position = Vector2( 848, 912 )
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy13" parent="." instance=ExtResource( 8 )]
position = Vector2( 880, 944 )
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy14" parent="." instance=ExtResource( 8 )]
position = Vector2( 912, 976 )
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy8" parent="." instance=ExtResource( 8 )]
position = Vector2( 720, 976 )
offset = 0.1
move_time = 0.1
speed = 100

[node name="Enemy9" parent="." instance=ExtResource( 8 )]
position = Vector2( 752, 944 )
offset = 0.1
move_time = 0.1
speed = 100

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 114, 129 )

[node name="Teleporter" parent="." instance=ExtResource( 10 )]
position = Vector2( 784, 720 )
teleport = Vector2( 592, 1040 )
[connection signal="Unlock" from="Green_Key" to="." method="_on_Green_Key_Unlock"]
[connection signal="Unlock" from="Blue_Key" to="." method="_on_Blue_Key_Unlock"]
[connection signal="newCheckpoint" from="CheckPoint" to="." method="_on_CheckPoint_newCheckpoint"]
[connection signal="newCheckpoint" from="CheckPoint3" to="." method="_on_CheckPoint3_newCheckpoint"]
[connection signal="newCheckpoint" from="CheckPoint2" to="." method="_on_CheckPoint2_newCheckpoint"]
[connection signal="respawn" from="Player" to="." method="_on_Player_respawn"]
[connection signal="retry" from="Player" to="." method="_on_Player_retry"]
